--- a/Fjsp/src/com/koitt/www/resources/ClsProperties.properties
+++ b/Fjsp/src/com/koitt/www/resources/ClsProperties.properties
@@ -13,3 +13,5 @@
 /board/boardwrite.cls=com.koitt.www.controller.board.BoardWrite
 /board/boardwriteproc.cls=com.koitt.www.controller.board.BoardWriteProc
 /board/boardclick.cls=com.koitt.www.controller.board.BoardClick
+/board/boarddelete.cls=com.koitt.www.controller.board.BoardDelete
+/board/boardreset.cls=com.koitt.www.controller.board.BoardReset
