--- a/Fjsp/src/com/koitt/www/resources/ClsProperties.properties
+++ b/Fjsp/src/com/koitt/www/resources/ClsProperties.properties
@@ -15,3 +15,13 @@
 /board/boardclick.cls=com.koitt.www.controller.board.BoardClick
 /board/boarddelete.cls=com.koitt.www.controller.board.BoardDelete
 /board/boardreset.cls=com.koitt.www.controller.board.BoardReset
+
+# 댓글 업로드 관련 요청
+/board/boardre.cls=com.koitt.www.controller.board.BoardRe
+/board/boardredel.cls=com.koitt.www.controller.board.Boardredel
+/board/reboard.cls=com.koitt.www.controller.board.Reboard
+
+# 설문조사 관련 요청
+/survey/survey.cls=com.koitt.www.controller.survey.Survey
+/survey/surveydetail.cls=com.koitt.www.controller.survey.SurveyDetail
+/survey/surveyresult.cls=com.koitt.www.controller.survey.SurveyResult
