--- a/Fjsp/src/com/koitt/www/resources/ClsProperties.properties
+++ b/Fjsp/src/com/koitt/www/resources/ClsProperties.properties
@@ -25,3 +25,4 @@
 /survey/survey.cls=com.koitt.www.controller.survey.Survey
 /survey/surveydetail.cls=com.koitt.www.controller.survey.SurveyDetail
 /survey/surveyresult.cls=com.koitt.www.controller.survey.SurveyResult
+/survey/surveyproc.cls=com.koitt.www.controller.survey.SurveyProc
